// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The course list WITH focusId should render 1 course, and match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CourseList
    courses={
        Array [
            Object {
              "description": "This course is the third of the innovation seminary",
              "id": 1,
              "lessons": Array [
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": "2019-01-18",
                  "description": "JMD will be talking about Agoranov for one long hour",
                  "hour": "16:45",
                  "lesson_number": 1,
                  "location": "Agoranov",
                },
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": undefined,
                  "description": "JB Bengo will be talking about very interesting things",
                  "hour": "15:15",
                  "lesson_number": 2,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": "2019-01-18",
                  "description": "JB Bengo will be talking about very interesting things",
                  "hour": "15:18",
                  "lesson_number": 3,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": "2019-01-18",
                  "description": "Version2 : JB Bengo will be talking about very interesting things",
                  "hour": "15:18",
                  "lesson_number": 4,
                  "location": "Telecom",
                },
              ],
              "main_teacher": "J-M. Dalle",
              "short_name": "SEMI",
              "title": "Seminaire Innovation",
            },
            Object {
              "description": "This course is the first of the innovation seminary",
              "id": 2,
              "last_modified": 0,
              "lessons": Array [
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "2019-01-18",
                  "description": "M. Bry will give you very interesting tips to build your first business model !",
                  "hour": "16:30",
                  "lesson_number": 1,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "2019-01-27",
                  "description": "Nicolas Bry will introduce you to the famous post-it technique",
                  "hour": "16:30",
                  "lesson_number": 2,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "2019-01-26",
                  "description": "You will now present your project, even if it is very shitty",
                  "hour": "14:30",
                  "lesson_number": 3,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "",
                  "description": "Ce cours n'existe pas",
                  "hour": "9:30",
                  "lesson_number": 10,
                  "location": "Telecom",
                },
              ],
              "main_teacher": "J-M. Dalle",
              "short_name": "I4",
              "title": "Management de l'innovation ",
            },
          ]
    }
    focusId={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Connect(Course)
        description="This course is the third of the innovation seminary"
        id={1}
        lessons={
                Array [
                        Object {
                          "course_id": 1,
                          "course_short_name": "SEMI",
                          "date": "2019-01-18",
                          "description": "JMD will be talking about Agoranov for one long hour",
                          "hour": "16:45",
                          "lesson_number": 1,
                          "location": "Agoranov",
                        },
                        Object {
                          "course_id": 1,
                          "course_short_name": "SEMI",
                          "date": undefined,
                          "description": "JB Bengo will be talking about very interesting things",
                          "hour": "15:15",
                          "lesson_number": 2,
                          "location": "Telecom",
                        },
                        Object {
                          "course_id": 1,
                          "course_short_name": "SEMI",
                          "date": "2019-01-18",
                          "description": "JB Bengo will be talking about very interesting things",
                          "hour": "15:18",
                          "lesson_number": 3,
                          "location": "Telecom",
                        },
                        Object {
                          "course_id": 1,
                          "course_short_name": "SEMI",
                          "date": "2019-01-18",
                          "description": "Version2 : JB Bengo will be talking about very interesting things",
                          "hour": "15:18",
                          "lesson_number": 4,
                          "location": "Telecom",
                        },
                      ]
        }
        main_teacher="J-M. Dalle"
        short_name="SEMI"
        showLessons={true}
        title="Seminaire Innovation"
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "description": "This course is the third of the innovation seminary",
        "id": 1,
        "lessons": Array [
          Object {
            "course_id": 1,
            "course_short_name": "SEMI",
            "date": "2019-01-18",
            "description": "JMD will be talking about Agoranov for one long hour",
            "hour": "16:45",
            "lesson_number": 1,
            "location": "Agoranov",
          },
          Object {
            "course_id": 1,
            "course_short_name": "SEMI",
            "date": undefined,
            "description": "JB Bengo will be talking about very interesting things",
            "hour": "15:15",
            "lesson_number": 2,
            "location": "Telecom",
          },
          Object {
            "course_id": 1,
            "course_short_name": "SEMI",
            "date": "2019-01-18",
            "description": "JB Bengo will be talking about very interesting things",
            "hour": "15:18",
            "lesson_number": 3,
            "location": "Telecom",
          },
          Object {
            "course_id": 1,
            "course_short_name": "SEMI",
            "date": "2019-01-18",
            "description": "Version2 : JB Bengo will be talking about very interesting things",
            "hour": "15:18",
            "lesson_number": 4,
            "location": "Telecom",
          },
        ],
        "main_teacher": "J-M. Dalle",
        "short_name": "SEMI",
        "showLessons": true,
        "title": "Seminaire Innovation",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Connect(Course)
          description="This course is the third of the innovation seminary"
          id={1}
          lessons={
                    Array [
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": "2019-01-18",
                                "description": "JMD will be talking about Agoranov for one long hour",
                                "hour": "16:45",
                                "lesson_number": 1,
                                "location": "Agoranov",
                              },
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": undefined,
                                "description": "JB Bengo will be talking about very interesting things",
                                "hour": "15:15",
                                "lesson_number": 2,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": "2019-01-18",
                                "description": "JB Bengo will be talking about very interesting things",
                                "hour": "15:18",
                                "lesson_number": 3,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": "2019-01-18",
                                "description": "Version2 : JB Bengo will be talking about very interesting things",
                                "hour": "15:18",
                                "lesson_number": 4,
                                "location": "Telecom",
                              },
                            ]
          }
          main_teacher="J-M. Dalle"
          short_name="SEMI"
          showLessons={true}
          title="Seminaire Innovation"
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "description": "This course is the third of the innovation seminary",
          "id": 1,
          "lessons": Array [
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JMD will be talking about Agoranov for one long hour",
              "hour": "16:45",
              "lesson_number": 1,
              "location": "Agoranov",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": undefined,
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:15",
              "lesson_number": 2,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 3,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "Version2 : JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 4,
              "location": "Telecom",
            },
          ],
          "main_teacher": "J-M. Dalle",
          "short_name": "SEMI",
          "showLessons": true,
          "title": "Seminaire Innovation",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`The course list without focusId should render 2 courses and match snapshot, showLessons should be falsy on each because we do not show lessons in this case,  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CourseList
    courses={
        Array [
            Object {
              "description": "This course is the third of the innovation seminary",
              "id": 1,
              "lessons": Array [
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": "2019-01-18",
                  "description": "JMD will be talking about Agoranov for one long hour",
                  "hour": "16:45",
                  "lesson_number": 1,
                  "location": "Agoranov",
                },
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": undefined,
                  "description": "JB Bengo will be talking about very interesting things",
                  "hour": "15:15",
                  "lesson_number": 2,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": "2019-01-18",
                  "description": "JB Bengo will be talking about very interesting things",
                  "hour": "15:18",
                  "lesson_number": 3,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 1,
                  "course_short_name": "SEMI",
                  "date": "2019-01-18",
                  "description": "Version2 : JB Bengo will be talking about very interesting things",
                  "hour": "15:18",
                  "lesson_number": 4,
                  "location": "Telecom",
                },
              ],
              "main_teacher": "J-M. Dalle",
              "short_name": "SEMI",
              "title": "Seminaire Innovation",
            },
            Object {
              "description": "This course is the first of the innovation seminary",
              "id": 2,
              "last_modified": 0,
              "lessons": Array [
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "2019-01-18",
                  "description": "M. Bry will give you very interesting tips to build your first business model !",
                  "hour": "16:30",
                  "lesson_number": 1,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "2019-01-27",
                  "description": "Nicolas Bry will introduce you to the famous post-it technique",
                  "hour": "16:30",
                  "lesson_number": 2,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "2019-01-26",
                  "description": "You will now present your project, even if it is very shitty",
                  "hour": "14:30",
                  "lesson_number": 3,
                  "location": "Telecom",
                },
                Object {
                  "course_id": 2,
                  "course_short_name": "I4",
                  "date": "",
                  "description": "Ce cours n'existe pas",
                  "hour": "9:30",
                  "lesson_number": 10,
                  "location": "Telecom",
                },
              ],
              "main_teacher": "J-M. Dalle",
              "short_name": "I4",
              "title": "Management de l'innovation ",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Course)
          description="This course is the third of the innovation seminary"
          id={1}
          lessons={
                    Array [
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": "2019-01-18",
                                "description": "JMD will be talking about Agoranov for one long hour",
                                "hour": "16:45",
                                "lesson_number": 1,
                                "location": "Agoranov",
                              },
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": undefined,
                                "description": "JB Bengo will be talking about very interesting things",
                                "hour": "15:15",
                                "lesson_number": 2,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": "2019-01-18",
                                "description": "JB Bengo will be talking about very interesting things",
                                "hour": "15:18",
                                "lesson_number": 3,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 1,
                                "course_short_name": "SEMI",
                                "date": "2019-01-18",
                                "description": "Version2 : JB Bengo will be talking about very interesting things",
                                "hour": "15:18",
                                "lesson_number": 4,
                                "location": "Telecom",
                              },
                            ]
          }
          main_teacher="J-M. Dalle"
          short_name="SEMI"
          showLessons={false}
          title="Seminaire Innovation"
/>,
        <Connect(Course)
          description="This course is the first of the innovation seminary"
          id={2}
          last_modified={0}
          lessons={
                    Array [
                              Object {
                                "course_id": 2,
                                "course_short_name": "I4",
                                "date": "2019-01-18",
                                "description": "M. Bry will give you very interesting tips to build your first business model !",
                                "hour": "16:30",
                                "lesson_number": 1,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 2,
                                "course_short_name": "I4",
                                "date": "2019-01-27",
                                "description": "Nicolas Bry will introduce you to the famous post-it technique",
                                "hour": "16:30",
                                "lesson_number": 2,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 2,
                                "course_short_name": "I4",
                                "date": "2019-01-26",
                                "description": "You will now present your project, even if it is very shitty",
                                "hour": "14:30",
                                "lesson_number": 3,
                                "location": "Telecom",
                              },
                              Object {
                                "course_id": 2,
                                "course_short_name": "I4",
                                "date": "",
                                "description": "Ce cours n'existe pas",
                                "hour": "9:30",
                                "lesson_number": 10,
                                "location": "Telecom",
                              },
                            ]
          }
          main_teacher="J-M. Dalle"
          short_name="I4"
          showLessons={false}
          title="Management de l'innovation "
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "description": "This course is the third of the innovation seminary",
          "id": 1,
          "lessons": Array [
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JMD will be talking about Agoranov for one long hour",
              "hour": "16:45",
              "lesson_number": 1,
              "location": "Agoranov",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": undefined,
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:15",
              "lesson_number": 2,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 3,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "Version2 : JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 4,
              "location": "Telecom",
            },
          ],
          "main_teacher": "J-M. Dalle",
          "short_name": "SEMI",
          "showLessons": false,
          "title": "Seminaire Innovation",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "class",
        "props": Object {
          "description": "This course is the first of the innovation seminary",
          "id": 2,
          "last_modified": 0,
          "lessons": Array [
            Object {
              "course_id": 2,
              "course_short_name": "I4",
              "date": "2019-01-18",
              "description": "M. Bry will give you very interesting tips to build your first business model !",
              "hour": "16:30",
              "lesson_number": 1,
              "location": "Telecom",
            },
            Object {
              "course_id": 2,
              "course_short_name": "I4",
              "date": "2019-01-27",
              "description": "Nicolas Bry will introduce you to the famous post-it technique",
              "hour": "16:30",
              "lesson_number": 2,
              "location": "Telecom",
            },
            Object {
              "course_id": 2,
              "course_short_name": "I4",
              "date": "2019-01-26",
              "description": "You will now present your project, even if it is very shitty",
              "hour": "14:30",
              "lesson_number": 3,
              "location": "Telecom",
            },
            Object {
              "course_id": 2,
              "course_short_name": "I4",
              "date": "",
              "description": "Ce cours n'existe pas",
              "hour": "9:30",
              "lesson_number": 10,
              "location": "Telecom",
            },
          ],
          "main_teacher": "J-M. Dalle",
          "short_name": "I4",
          "showLessons": false,
          "title": "Management de l'innovation ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Course)
            description="This course is the third of the innovation seminary"
            id={1}
            lessons={
                        Array [
                                    Object {
                                      "course_id": 1,
                                      "course_short_name": "SEMI",
                                      "date": "2019-01-18",
                                      "description": "JMD will be talking about Agoranov for one long hour",
                                      "hour": "16:45",
                                      "lesson_number": 1,
                                      "location": "Agoranov",
                                    },
                                    Object {
                                      "course_id": 1,
                                      "course_short_name": "SEMI",
                                      "date": undefined,
                                      "description": "JB Bengo will be talking about very interesting things",
                                      "hour": "15:15",
                                      "lesson_number": 2,
                                      "location": "Telecom",
                                    },
                                    Object {
                                      "course_id": 1,
                                      "course_short_name": "SEMI",
                                      "date": "2019-01-18",
                                      "description": "JB Bengo will be talking about very interesting things",
                                      "hour": "15:18",
                                      "lesson_number": 3,
                                      "location": "Telecom",
                                    },
                                    Object {
                                      "course_id": 1,
                                      "course_short_name": "SEMI",
                                      "date": "2019-01-18",
                                      "description": "Version2 : JB Bengo will be talking about very interesting things",
                                      "hour": "15:18",
                                      "lesson_number": 4,
                                      "location": "Telecom",
                                    },
                                  ]
            }
            main_teacher="J-M. Dalle"
            short_name="SEMI"
            showLessons={false}
            title="Seminaire Innovation"
/>,
          <Connect(Course)
            description="This course is the first of the innovation seminary"
            id={2}
            last_modified={0}
            lessons={
                        Array [
                                    Object {
                                      "course_id": 2,
                                      "course_short_name": "I4",
                                      "date": "2019-01-18",
                                      "description": "M. Bry will give you very interesting tips to build your first business model !",
                                      "hour": "16:30",
                                      "lesson_number": 1,
                                      "location": "Telecom",
                                    },
                                    Object {
                                      "course_id": 2,
                                      "course_short_name": "I4",
                                      "date": "2019-01-27",
                                      "description": "Nicolas Bry will introduce you to the famous post-it technique",
                                      "hour": "16:30",
                                      "lesson_number": 2,
                                      "location": "Telecom",
                                    },
                                    Object {
                                      "course_id": 2,
                                      "course_short_name": "I4",
                                      "date": "2019-01-26",
                                      "description": "You will now present your project, even if it is very shitty",
                                      "hour": "14:30",
                                      "lesson_number": 3,
                                      "location": "Telecom",
                                    },
                                    Object {
                                      "course_id": 2,
                                      "course_short_name": "I4",
                                      "date": "",
                                      "description": "Ce cours n'existe pas",
                                      "hour": "9:30",
                                      "lesson_number": 10,
                                      "location": "Telecom",
                                    },
                                  ]
            }
            main_teacher="J-M. Dalle"
            short_name="I4"
            showLessons={false}
            title="Management de l'innovation "
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "description": "This course is the third of the innovation seminary",
            "id": 1,
            "lessons": Array [
              Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": "2019-01-18",
                "description": "JMD will be talking about Agoranov for one long hour",
                "hour": "16:45",
                "lesson_number": 1,
                "location": "Agoranov",
              },
              Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": undefined,
                "description": "JB Bengo will be talking about very interesting things",
                "hour": "15:15",
                "lesson_number": 2,
                "location": "Telecom",
              },
              Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": "2019-01-18",
                "description": "JB Bengo will be talking about very interesting things",
                "hour": "15:18",
                "lesson_number": 3,
                "location": "Telecom",
              },
              Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": "2019-01-18",
                "description": "Version2 : JB Bengo will be talking about very interesting things",
                "hour": "15:18",
                "lesson_number": 4,
                "location": "Telecom",
              },
            ],
            "main_teacher": "J-M. Dalle",
            "short_name": "SEMI",
            "showLessons": false,
            "title": "Seminaire Innovation",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "class",
          "props": Object {
            "description": "This course is the first of the innovation seminary",
            "id": 2,
            "last_modified": 0,
            "lessons": Array [
              Object {
                "course_id": 2,
                "course_short_name": "I4",
                "date": "2019-01-18",
                "description": "M. Bry will give you very interesting tips to build your first business model !",
                "hour": "16:30",
                "lesson_number": 1,
                "location": "Telecom",
              },
              Object {
                "course_id": 2,
                "course_short_name": "I4",
                "date": "2019-01-27",
                "description": "Nicolas Bry will introduce you to the famous post-it technique",
                "hour": "16:30",
                "lesson_number": 2,
                "location": "Telecom",
              },
              Object {
                "course_id": 2,
                "course_short_name": "I4",
                "date": "2019-01-26",
                "description": "You will now present your project, even if it is very shitty",
                "hour": "14:30",
                "lesson_number": 3,
                "location": "Telecom",
              },
              Object {
                "course_id": 2,
                "course_short_name": "I4",
                "date": "",
                "description": "Ce cours n'existe pas",
                "hour": "9:30",
                "lesson_number": 10,
                "location": "Telecom",
              },
            ],
            "main_teacher": "J-M. Dalle",
            "short_name": "I4",
            "showLessons": false,
            "title": "Management de l'innovation ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
